# src/@types/comment.ts
@@ -1,0 +1,7 @@
+export interface Comment {
+    id: number;
+    email: string;
+    name: string;
+    status?: "Happy" | "Sad";
+    phoneNumbers: string[];
+}
